# ATK

./: .gitignore  METHODOLOGY.en.md  METHODOLOGY.md  README.en.md  README.md  agent-test-kit.toml  pyproject.toml
examples/kasko/: client.py  conftest.py  session.py  test_example.py
src/agent_test_kit/: __init__.py  allure_support.py  client.py  config.py  geval.py  golden.py  helpers.py  http_client.py  judge.py  metrics.py  mock.py  pytest_plugin.py  response.py  session.py  statistical.py
src/agent_test_kit/generic_tests/: __init__.py  concurrency.py  corrections.py  edge_cases.py  format.py  jailbreak.py  language.py  latency.py  long_context.py  memory.py  mixed_intent.py  off_topic.py  out_of_scope.py  paraphrase.py  payload_safety.py  performance.py  privacy.py  prompt_security.py  recall.py  reproducibility.py  scope_recovery.py  security.py  session_resilience.py  social_engineering.py  stability.py  style.py
tests/: conftest.py  test_allure_support.py  test_generic_suites.py  test_geval.py  test_golden.py  test_integration.py  test_judge.py  test_live_service_concurrency.py  test_live_service_corrections.py  test_live_service_edge_cases.py  test_live_service_jailbreak.py  test_live_service_language.py  test_live_service_latency.py  test_live_service_long_context.py  test_live_service_mixed_intent.py  test_live_service_off_topic.py  test_live_service_paraphrase.py  test_live_service_payload_safety.py  test_live_service_privacy.py  test_live_service_prompt_security.py  test_live_service_recall.py  test_live_service_reproducibility.py  test_live_service_scope_recovery.py  test_live_service_session_resilience.py  test_live_service_social_engineering.py  test_live_service_style.py  test_live_service_surface_format.py  test_session.py  test_statistical.py
